[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/control/roomCam.gd" type="Script" id=1]
[ext_resource path="res://fonts/liberation-fonts-ttf-2.00.1/LiberationMono-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/liberation-fonts-ttf-2.00.1/Liberation Font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[node name="roomCam" type="Camera2D"]
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="soulsCollected" type="Label" parent="."]
margin_left = -459.126
margin_top = -270.126
margin_right = -419.126
margin_bottom = -242.126
custom_fonts/font = ExtResource( 3 )
text = "0 Almas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clearedRooms" type="Label" parent="."]
margin_left = -459.0
margin_top = -247.0
margin_right = -361.0
margin_bottom = -219.0
custom_fonts/font = ExtResource( 3 )
text = "0 Salas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameTime" type="Label" parent="."]
margin_left = -459.126
margin_top = -224.0
margin_right = -419.126
margin_bottom = -196.0
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeComplete" type="Label" parent="."]
visible = false
margin_left = -459.126
margin_top = -211.126
margin_right = -419.126
margin_bottom = -183.126
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
